--- a/exist-core/pom.xml
+++ b/exist-core/pom.xml
@@ -602,6 +602,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+          <groupId>de.bottlecaps</groupId>
+          <artifactId>markup-blitz</artifactId>
+          <version>1.3</version>
+        </dependency>
     </dependencies>
 
     <build>
